--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>URLTest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>URLTest</name>
+	<name>BarTellDrugs</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://maven.apache.org</url>
 
@@ -96,15 +96,17 @@
 	<build>
 
 		<plugins>
+			
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<release>11</release>
-
-				</configuration>
-			</plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.5.1</version>
+         <configuration>
+             <source>1.8</source>
+             <target>1.8</target>
+         </configuration>
+     </plugin>
+     
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
