--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,6 @@
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.5.1</version>
          <configuration>
-		 <testFailureIgnore>true</testFailureIgnore>
              <source>1.8</source>
              <target>1.8</target>
          </configuration>
@@ -111,7 +110,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.1 </version>
+				<version>3.0.0-M1</version>
 
 				<configuration>
 					<suiteXmlFiles>
