--- a/pom.xml
+++ b/pom.xml
@@ -109,15 +109,23 @@
      
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+   <version>2.22.0</version>
+  <configuration>
+  <testFailureIgnore>true</testFailureIgnore>
+    <reuseForks>true</reuseForks>
+    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+  </configuration>
+<!-- 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<suiteXmlFile>${-DsuiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
 					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
+				</configuration> -->
 			</plugin>
 		</plugins>
 	</build>
